--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2621,6 +2621,7 @@ input, select, textarea {
 			-ms-flex-grow: 1;
 			flex-grow: 1;
 			margin: 0 0 2em 0;
+			text-align:center;
 		}
 
 		#header strong, #header b {
